--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -4805,24 +4805,6 @@
         "th":"",
         "id":""
     },
-    "UI.windows.mails.table.to":{
-        "en":"To",
-        "fr":"Dest.",
-        "es":"",
-        "ch":"",
-        "kr":"",
-        "ru":"",
-        "tr":"",
-        "de":"",
-        "jp":"",
-        "pt":"",
-        "vi":"",
-        "ar":"",
-        "it":"",
-        "pl":"",
-        "th":"",
-        "id":""
-    },
     "UI.windows.mails.table.subject":{
         "en":"Subject",
         "fr":"Sujet",
@@ -4844,6 +4826,42 @@
     "UI.windows.mails.table.timeleft":{
         "en":"Time Left",
         "fr":"Temps Restant",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.mails.field.to":{
+        "en":"To",
+        "fr":"Dest.",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.mails.field.content":{
+        "en":"Content",
+        "fr":"Message",
         "es":"",
         "ch":"",
         "kr":"",
