--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -5020,5 +5020,23 @@
         "pl":"",
         "th":"",
         "id":""
+    },
+    "UI.windows.mails.send.type-consign":{
+        "en":"Consign",
+        "fr":"Vendre",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
