--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -4708,7 +4708,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thư",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4726,7 +4726,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thư Đến",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4744,7 +4744,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hệ Thống",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4762,7 +4762,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Gửi",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4780,7 +4780,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đã Đọc",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4798,7 +4798,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Từ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4816,7 +4816,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Chủ Đề",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4834,7 +4834,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thời Gian Còn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4852,7 +4852,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đến",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4870,7 +4870,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nội Dung",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4888,7 +4888,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đính Kèm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4906,7 +4906,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Xóa",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4924,7 +4924,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Gửi",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4942,7 +4942,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nhận",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4960,7 +4960,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thư - Đã Xóa",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4978,7 +4978,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tất cả các thư và đính kèm đi cùng sẽ bị xóa vĩnh viễn. Tiếp tục chứ?",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4996,7 +4996,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thư - Nhận",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5014,7 +5014,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bạn chuẩn bị mua vật phẩm này với giá {0} Vàng. Tiếp tục chứ?",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5032,7 +5032,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"ký Gửi",
         "ar":"",
         "it":"",
         "pl":"",
