--- a/Translation/general.json
+++ b/Translation/general.json
@@ -1054,7 +1054,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Giây",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1072,7 +1072,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Giây",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1090,7 +1090,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Phút",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1108,7 +1108,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Phút",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1126,7 +1126,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Giờ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1144,7 +1144,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Giờ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1162,7 +1162,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Ngày",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1180,7 +1180,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Ngày",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1198,7 +1198,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tháng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1216,7 +1216,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tháng",
         "ar":"",
         "it":"",
         "pl":"",
