--- a/Translation/map.json
+++ b/Translation/map.json
@@ -629,6 +629,96 @@
         "th":"",
         "id":""
     },
+    "map.C2_Byron_City_Floor_2.name":{
+        "en":"Byron City 2",
+        "fr":"Cité de Byron 2",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Tháp Byron 2",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.C2_Byron_City_Floor_3.name":{
+        "en":"Byron City 3",
+        "fr":"Cité de Byron 3",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Tháp Byron 3",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.C2_Byron_City_Floor_4.name":{
+        "en":"Byron City 4",
+        "fr":"Cité de Byron 4",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Tháp Byron 4",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.C2_Byron_City_Floor_5.name":{
+        "en":"Byron City 5",
+        "fr":"Cité de Byron 5",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Tháp Byron 5",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.C2_Byron_City_Palace.name":{
+        "en":"Byron City - Palace",
+        "fr":"Cité de Byron - Palace",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "map.C2_Byron_City_Hall_Of_Elite.name":{
         "en":"Byron City Hall of Elite",
         "fr":"Cité de Byron Hall d'Élite",
