--- a/Translation/map.json
+++ b/Translation/map.json
@@ -712,7 +712,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tháp Byron - Thẳm Điện",
         "ar":"",
         "it":"",
         "pl":"",
