--- a/Translation/general.json
+++ b/Translation/general.json
@@ -1222,5 +1222,23 @@
         "pl":"",
         "th":"",
         "id":""
+    },
+    "general.label.miss":{
+        "en":"Miss",
+        "fr":"Raté",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
