--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -1990,7 +1990,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tách",
         "ar":"",
         "it":"",
         "pl":"",
