--- a/Translation/general.json
+++ b/Translation/general.json
@@ -1234,7 +1234,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hụt",
         "ar":"",
         "it":"",
         "pl":"",
