--- a/Translation/map.json
+++ b/Translation/map.json
@@ -611,6 +611,24 @@
         "th":"",
         "id":""
     },
+    "map.C2_Muradin_Kingdom.name":{
+        "en":"Muradin Kingdom",
+        "fr":"Royaume de Muradin",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "map.C2_Byron_City_Floor_1.name":{
         "en":"Byron City 1",
         "fr":"Cité de Byron 1",
@@ -749,6 +767,114 @@
         "jp":"",
         "pt":"",
         "vi":"Tháp Byron - Điện Tinh Anh Sâu",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.C2_Byron_City.name":{
+        "en":"Byron City",
+        "fr":"Cité de Byron",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Tháp Byron",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.C2_Burning_Altar.name":{
+        "en":"Burning Altar",
+        "fr":"Autel Brulant",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.C2_Burning_Tomb.name":{
+        "en":"Burning Tomb",
+        "fr":"Tombe Brulante",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.C2_Endless_Desert.name":{
+        "en":"Endless Desert",
+        "fr":"Desert Sans Fin",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.C2_Fiery_Tower.name":{
+        "en":"Fiery Tower",
+        "fr":"Tour de Feu",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.C2_Fiery_Tower_Gates.name":{
+        "en":"Fiery Tower",
+        "fr":"Tour de Feu",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
         "ar":"",
         "it":"",
         "pl":"",
