--- a/Translation/map.json
+++ b/Translation/map.json
@@ -864,8 +864,8 @@
         "id":""
     },
     "map.C2_Fiery_Tower_Gates.name":{
-        "en":"Fiery Tower",
-        "fr":"Tour de Feu",
+        "en":"Fiery Tower Gates",
+        "fr":"Portes Tour de Feu",
         "es":"",
         "ch":"",
         "kr":"",
