--- a/Translation/map.json
+++ b/Translation/map.json
@@ -880,5 +880,23 @@
         "pl":"",
         "th":"",
         "id":""
+    },
+    "map.C2_Sultan_Ruins.name":{
+        "en":"Sultan Ruins",
+        "fr":"Ruines du Sultan",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
