--- a/Translation/map.json
+++ b/Translation/map.json
@@ -622,7 +622,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Vương Đô Muradin",
         "ar":"",
         "it":"",
         "pl":"",
@@ -640,7 +640,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tháp Byron 1",
+        "vi":"Tháp Byron Tầng 1",
         "ar":"",
         "it":"",
         "pl":"",
@@ -658,7 +658,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tháp Byron 2",
+        "vi":"Tháp Byron Tầng 2",
         "ar":"",
         "it":"",
         "pl":"",
@@ -676,7 +676,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tháp Byron 3",
+        "vi":"Tháp Byron Tầng 3",
         "ar":"",
         "it":"",
         "pl":"",
@@ -694,7 +694,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tháp Byron 4",
+        "vi":"Tháp Byron Tầng 4",
         "ar":"",
         "it":"",
         "pl":"",
@@ -712,7 +712,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tháp Byron 5",
+        "vi":"Tháp Byron Tầng 5",
         "ar":"",
         "it":"",
         "pl":"",
@@ -802,7 +802,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tế Đàn Bốc Cháy",
         "ar":"",
         "it":"",
         "pl":"",
@@ -820,7 +820,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hầm Mộ Bốc Cháy",
         "ar":"",
         "it":"",
         "pl":"",
@@ -838,7 +838,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Sa Mạc Bất Tận",
         "ar":"",
         "it":"",
         "pl":"",
@@ -856,7 +856,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tháp Viêm Hỏa",
         "ar":"",
         "it":"",
         "pl":"",
@@ -874,7 +874,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cổng Tháp Viêm Hỏa",
         "ar":"",
         "it":"",
         "pl":"",
@@ -892,7 +892,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tàn Tích Sultan",
         "ar":"",
         "it":"",
         "pl":"",
