--- a/Translation/map.json
+++ b/Translation/map.json
@@ -881,6 +881,42 @@
         "th":"",
         "id":""
     },
+    "map.C2_Fiery_Tower_Hall_Of_Elite.name":{
+        "en":"Fiery Tower Hall of Elite",
+        "fr":"Tour de Feu Hall d'Élite",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.C2_Fiery_Tower_Hall_Of_Elite_Deep.name":{
+        "en":"Fiery Tower Hall of Elite Deep",
+        "fr":"Tour de Feu Hall d'Élite Profond",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "map.C2_Sultan_Ruins.name":{
         "en":"Sultan Ruins",
         "fr":"Ruines du Sultan",
