--- a/Translation/map.json
+++ b/Translation/map.json
@@ -640,7 +640,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tháp Byron Tầng 1",
+        "vi":"Thành Phố Byron Tầng 1",
         "ar":"",
         "it":"",
         "pl":"",
@@ -658,7 +658,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tháp Byron Tầng 2",
+        "vi":"Thành Phố Byron Tầng 2",
         "ar":"",
         "it":"",
         "pl":"",
@@ -676,7 +676,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tháp Byron Tầng 3",
+        "vi":"Thành Phố Byron Tầng 3",
         "ar":"",
         "it":"",
         "pl":"",
@@ -694,7 +694,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tháp Byron Tầng 4",
+        "vi":"Thành Phố Byron Tầng 4",
         "ar":"",
         "it":"",
         "pl":"",
@@ -712,7 +712,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tháp Byron Tầng 5",
+        "vi":"Thành Phố Byron Tầng 5",
         "ar":"",
         "it":"",
         "pl":"",
@@ -730,7 +730,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tháp Byron - Thẳm Điện",
+        "vi":"Thành Phố Byron - Thẳm Điện",
         "ar":"",
         "it":"",
         "pl":"",
@@ -748,7 +748,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tháp Byron - Điện Tinh Anh",
+        "vi":"Thành Phố Byron - Điện Tinh Anh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -766,7 +766,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tháp Byron - Điện Tinh Anh Sâu",
+        "vi":"Thành Phố Byron - Điện Tinh Anh Sâu",
         "ar":"",
         "it":"",
         "pl":"",
@@ -784,7 +784,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tháp Byron",
+        "vi":"Thành Phố Byron",
         "ar":"",
         "it":"",
         "pl":"",
@@ -856,7 +856,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tháp Viêm Hỏa",
+        "vi":"Tháp Hỏa Viêm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -874,7 +874,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cổng Tháp Viêm Hỏa",
+        "vi":"Cổng Tháp Hỏa Viêm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -892,7 +892,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tháp Hỏa Viêm - Điện Tinh Anh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -910,7 +910,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tháp Hỏa Viêm - Điện Tinh Anh Sâu",
         "ar":"",
         "it":"",
         "pl":"",
