--- a/Translation/map.json
+++ b/Translation/map.json
@@ -829,7 +829,7 @@
     },
     "map.C2_Endless_Desert.name":{
         "en":"Endless Desert",
-        "fr":"Desert Sans Fin",
+        "fr":"Désert Sans Fin",
         "es":"",
         "ch":"",
         "kr":"",
