--- a/Translation/general.json
+++ b/Translation/general.json
@@ -1240,5 +1240,23 @@
         "pl":"",
         "th":"",
         "id":""
+    },
+    "general.label.name":{
+        "en":"Name",
+        "fr":"Nom",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
