--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -4222,7 +4222,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Phụ bản vừa được bắt đầu. Bạn sẽ tham gia chứ?",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5068,7 +5068,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"ký Gửi",
+        "vi":"Gửi Bán",
         "ar":"",
         "it":"",
         "pl":"",
