--- a/Translation/general.json
+++ b/Translation/general.json
@@ -1252,7 +1252,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tên",
         "ar":"",
         "it":"",
         "pl":"",
