--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -2501,6 +2501,60 @@
         "th":"",
         "id":"Lelang"
     },
+    "UI.windows.consign.filter.levelMin":{
+        "en":"Lv. Min",
+        "fr":"Nv. Min",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.consign.filter.levelMax":{
+        "en":"Lv. Max",
+        "fr":"Nv. Max",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.consign.filter.consignorName":{
+        "en":"Consignor Name",
+        "fr":"Nom du Vendeur",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "UI.windows.skills.title":{
         "en":"Skills",
         "fr":"Compétences",
