--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -2458,7 +2458,7 @@
         "de":"Gold Laden",
         "jp":"",
         "pt":"",
-        "vi":"Vàng",
+        "vi":"Tiệm Vàng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2512,7 +2512,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cấp T.Thiểu",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2530,7 +2530,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cấp T.Đa",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2548,7 +2548,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tên Người Gửi Bán",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2566,7 +2566,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Người Gửi Bán",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2602,7 +2602,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đơn Giá",
         "ar":"",
         "it":"",
         "pl":"",
