--- a/Translation/item.json
+++ b/Translation/item.json
@@ -3484,7 +3484,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[Linh Trứng] Xác Ướp Cháy",
+        "vi":"[Linh Trứng] Xác Ướp Bốc Cháy",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3502,7 +3502,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Rồng Con",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4600,7 +4600,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Xác Ướp Cháy",
+        "vi":"Xác Ướp Bốc Cháy",
         "ar":"",
         "it":"",
         "pl":"",
