--- a/Translation/item.json
+++ b/Translation/item.json
@@ -377,6 +377,24 @@
         "th":"",
         "id":""
     },
+    "item.type.material":{
+        "en":"Material",
+        "fr":"Materiaux",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.1.name":{
         "en":"Gold Pile",
         "fr":"Pile d'Or",
