--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -2620,7 +2620,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hiện Tất Cả",
         "ar":"",
         "it":"",
         "pl":"",
