--- a/Translation/item.json
+++ b/Translation/item.json
@@ -388,7 +388,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nguyên Liệu",
         "ar":"",
         "it":"",
         "pl":"",
