--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -2645,6 +2645,24 @@
         "th":"",
         "id":""
     },
+    "UI.windows.consign.btn.my-consign":{
+        "en":"My Consign",
+        "fr":"Mes Ventes",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "UI.windows.skills.title":{
         "en":"Skills",
         "fr":"Compétences",
