--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -3365,6 +3365,24 @@
         "th":"",
         "id":""
     },
+    "UI.windows.guild.askDisband":{
+        "en":"Once you disband a guild, you will have to wait a day before joining a new one and the guild will be lost forever. Continue ?",
+        "fr":"Une fois la guilde disoute, vous devrez attendre un jour avant de pouvoir un joindre une nouvelle et la guilde seras perdue a jamais. Continuer ?",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "UI.windows.guild.btn.donate":{
         "en":"Dnat.",
         "fr":"Don.",
@@ -3437,9 +3455,9 @@
         "th":"",
         "id":""
     },
-    "UI.windows.guild.btn.manage":{
-        "en":"Mng.",
-        "fr":"Gérer",
+    "UI.windows.guild.btn.leave":{
+        "en":"Leave",
+        "fr":"Partir",
         "es":"",
         "ch":"",
         "kr":"",
@@ -3448,7 +3466,25 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Q.Lý",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.guild.btn.disband":{
+        "en":"Disband",
+        "fr":"Disoudre",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
         "ar":"",
         "it":"",
         "pl":"",
