--- a/Translation/general.json
+++ b/Translation/general.json
@@ -10,7 +10,7 @@
         "de":"Gilde",
         "jp":"",
         "pt":"",
-        "vi":"Bang Hội",
+        "vi":"Công Hội",
         "ar":"",
         "it":"",
         "pl":"",
