--- a/Translation/item.json
+++ b/Translation/item.json
@@ -10450,7 +10450,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tài Nguyên Bang Hội",
+        "vi":"Tài Nguyên Công Hội",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11854,7 +11854,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 20 Nguyên Liệu Trang Bị Phẩm Cấp D",
+        "vi":"Cấp 20 Nguyên Liệu Trang Bị Tư Chất D",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11872,7 +11872,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 10 Nguyên Liệu Trang Bị Phẩm Cấp C",
+        "vi":"Cấp 10 Nguyên Liệu Trang Bị Tư Chất C",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11890,7 +11890,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 10 Nguyên Liệu Trang Bị Phẩm Cấp B",
+        "vi":"Cấp 10 Nguyên Liệu Trang Bị Tư Chất B",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11908,7 +11908,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 10 Nguyên Liệu Trang Bị Phẩm Cấp A",
+        "vi":"Cấp 10 Nguyên Liệu Trang Bị Tư Chất A",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11926,7 +11926,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 30 Nguyên Liệu Trang Bị Phẩm Cấp D",
+        "vi":"Cấp 30 Nguyên Liệu Trang Bị Tư Chất D",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11944,7 +11944,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 30 Nguyên Liệu Trang Bị Phẩm Cấp C",
+        "vi":"Cấp 30 Nguyên Liệu Trang Bị Tư Chất C",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11962,7 +11962,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 30 Nguyên Liệu Trang Bị Phẩm Cấp B",
+        "vi":"Cấp 30 Nguyên Liệu Trang Bị Tư Chất B",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11980,7 +11980,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 30 Nguyên Liệu Trang Bị Phẩm Cấp A",
+        "vi":"Cấp 30 Nguyên Liệu Trang Bị Tư Chất A",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11998,7 +11998,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 40 Nguyên Liệu Trang Bị Phẩm Cấp D",
+        "vi":"Cấp 40 Nguyên Liệu Trang Bị Tư Chất D",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12016,7 +12016,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 40 Nguyên Liệu Trang Bị Phẩm Cấp C",
+        "vi":"Cấp 40 Nguyên Liệu Trang Bị Tư Chất C",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12034,7 +12034,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 40 Nguyên Liệu Trang Bị Phẩm Cấp B",
+        "vi":"Cấp 40 Nguyên Liệu Trang Bị Tư Chất B",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12052,7 +12052,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 40 Nguyên Liệu Trang Bị Phẩm Cấp A",
+        "vi":"Cấp 40 Nguyên Liệu Trang Bị Tư Chất A",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12070,7 +12070,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 50 Nguyên Liệu Trang Bị Phẩm Cấp D",
+        "vi":"Cấp 50 Nguyên Liệu Trang Bị Tư Chất D",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12088,7 +12088,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 50 Nguyên Liệu Trang Bị Phẩm Cấp C",
+        "vi":"Cấp 50 Nguyên Liệu Trang Bị Tư Chất C",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12106,7 +12106,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 50 Nguyên Liệu Trang Bị Phẩm Cấp B",
+        "vi":"Cấp 50 Nguyên Liệu Trang Bị Tư Chất B",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12124,7 +12124,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 50 Nguyên Liệu Trang Bị Phẩm Cấp A",
+        "vi":"Cấp 50 Nguyên Liệu Trang Bị Tư Chất A",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12142,7 +12142,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 60 Nguyên Liệu Trang Bị Phẩm Cấp D",
+        "vi":"Cấp 60 Nguyên Liệu Trang Bị Tư Chất D",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12160,7 +12160,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 60 Nguyên Liệu Trang Bị Phẩm Cấp C",
+        "vi":"Cấp 60 Nguyên Liệu Trang Bị Tư Chất C",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12178,7 +12178,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 60 Nguyên Liệu Trang Bị Phẩm Cấp B",
+        "vi":"Cấp 60 Nguyên Liệu Trang Bị Tư Chất B",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12196,7 +12196,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 60 Nguyên Liệu Trang Bị Phẩm Cấp A",
+        "vi":"Cấp 60 Nguyên Liệu Trang Bị Tư Chất A",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12214,7 +12214,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 70 Nguyên Liệu Trang Bị Phẩm Cấp D",
+        "vi":"Cấp 70 Nguyên Liệu Trang Bị Tư Chất D",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12232,7 +12232,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 70 Nguyên Liệu Trang Bị Phẩm Cấp C",
+        "vi":"Cấp 70 Nguyên Liệu Trang Bị Tư Chất C",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12250,7 +12250,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 70 Nguyên Liệu Trang Bị Phẩm Cấp B",
+        "vi":"Cấp 70 Nguyên Liệu Trang Bị Tư Chất B",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12268,7 +12268,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 70 Nguyên Liệu Trang Bị Phẩm Cấp A",
+        "vi":"Cấp 70 Nguyên Liệu Trang Bị Tư Chất A",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12286,7 +12286,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 10 Nguyên Liệu Trang Bị Phẩm Cấp D",
+        "vi":"Cấp 10 Nguyên Liệu Trang Bị Tư Chất D",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12304,7 +12304,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 20 Nguyên Liệu Trang Bị Phẩm Cấp D",
+        "vi":"Cấp 20 Nguyên Liệu Trang Bị Tư Chất D",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12322,7 +12322,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 10 Nguyên Liệu Trang Bị Phẩm Cấp C",
+        "vi":"Cấp 10 Nguyên Liệu Trang Bị Tư Chất C",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12340,7 +12340,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 10 Nguyên Liệu Trang Bị Phẩm Cấp B",
+        "vi":"Cấp 10 Nguyên Liệu Trang Bị Tư Chất B",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12358,7 +12358,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 10 Nguyên Liệu Trang Bị Phẩm Cấp A",
+        "vi":"Cấp 10 Nguyên Liệu Trang Bị Tư Chất A",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12376,7 +12376,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 30 Nguyên Liệu Trang Bị Phẩm Cấp D",
+        "vi":"Cấp 30 Nguyên Liệu Trang Bị Tư Chất D",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12394,7 +12394,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 30 Nguyên Liệu Trang Bị Phẩm Cấp C",
+        "vi":"Cấp 30 Nguyên Liệu Trang Bị Tư Chất C",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12412,7 +12412,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 30 Nguyên Liệu Trang Bị Phẩm Cấp B",
+        "vi":"Cấp 30 Nguyên Liệu Trang Bị Tư Chất B",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12430,7 +12430,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 30 Nguyên Liệu Trang Bị Phẩm Cấp A",
+        "vi":"Cấp 30 Nguyên Liệu Trang Bị Tư Chất A",
         "ar":"",
         "it":"",
         "pl":"",
