--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -442,7 +442,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Mời Bang Hội",
+        "vi":"Mời Công Hội",
         "ar":"",
         "it":"",
         "pl":"",
