--- a/Translation/general.json
+++ b/Translation/general.json
@@ -1294,5 +1294,23 @@
         "pl":"",
         "th":"",
         "id":"Peralatan"
+    },
+    "general.label.info":{
+        "en":"Info",
+        "fr":"Info",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
